Edited out some extra text

--- a/index.html
+++ b/index.html
@@ -7,23 +7,8 @@
   <body>
     <h1><strong>Support Our Community Through Your Membership</strong></h1>
     <p>Ravenswood Manor is a strong community due to the collective efforts of our residents and Ravenswood Manor Improvement 
-      Association (RMIA). Your neighborhood association depends on your annual membership to do our work throughout the year. </p>
-    <ul>
-      <li><strong>We organize</strong> annual Easter Egg Hunt, Garage Sale, Garden Walk, 4th of July Bike Parade, and summer concert 
-        series in Ravenswood Manor Park</li>
-      <li><strong>We represent</strong> community interests with 33rd Ward Alderman, City of Chicago departments: Police, Fire, 
-        Park District, local schools, local businesses, and media</li>
-      <li><strong>We preserve</strong> our community parks and parkways, including LaPointe Park and our community garden</li>
-      <li><strong>We support</strong> Waters Elementary School and WatersToday organization</li>
-      <li><strong>We connect</strong> with residents through our free printed quarterly bulletin <em>Manor News</em>, email newsletters, 
-        social media, and ravenswoodmanor.com</li>
-    </ul>
-    <h2>Please complete your household membership today!</h2>
-    <p>Annual membership runs from November through October and can cover any interested adult individual living in your household. 
-      But you are welcome to join or renew at any time!</p>
-    <p>We ask you to consider a contribution that is significant to you, and we hope that your will renew as a Centennial Member at 
-      $100.</p>
-    <p>We thank you for your consideration and support!</p>
+      Association (RMIA). We depend on your membership contributions to do our work throughout the year. Annual membership runs from 
+      November through October, but you are welcome to join or renew at any time. Make a contribution that is significant to you!</p>
     <form method="GET" autocomplete="on" action="#null" enctype="multipart/form-data">
       <fieldset>
         <legend>Select Your Membership Level</legend>
@@ -42,23 +27,23 @@
         <legend>Enter Your Information</legend>
         <div>
           <label class="fontsize" for="fname">First Name:</label>
-          <input type="text" id="fname" class="fontsize" name="first_name_field" placeholder="Enter your first name" />
+          <input type="text" id="fname" class="fontsize" name="first_name_field" placeholder="First Name" />
         </div>
         <div>
           <label class="fontsize" for="lname">Last Name:</label>
-          <input type="text" id="lname" class="fontsize" name="last_name_field" placeholder="Enter your last name" />
+          <input type="text" id="lname" class="fontsize" name="last_name_field" placeholder="Last Name" />
         </div>
         <div>
           <label class="fontsize" for="address">Street Address:</label>
-          <input type="text" name="address_field" placeholder="Enter your street address" />
+          <input type="text" name="address_field" placeholder="Street Address" />
         </div>
         <div>
           <label class="fontsize" for="address">Apartment Number:</label>
-          <input type="text" name="apt_field" placeholder="Enter your apartment number" />
+          <input type="text" name="apt_field" placeholder="Apartment Number" />
         </div>
         <div>
           <label class="fontsize" for="address">City:</label>
-          <input type="text" name="city_field" placeholder="Enter your city" />
+          <input type="text" name="city_field" placeholder="City" />
         </div>
         <div>
           <label>State: </label>
@@ -118,37 +103,29 @@
         </div>
         <div>
           <label class="fontsize" for="zip">Zip Code:</label>
-          <input type="text" name="zip_field" placeholder="Enter your zip code" />
+          <input type="text" name="zip_field" placeholder="Zip Code" />
         </div>
         <div>
           <label class="fontsize" for="email">Email Address:</label>
-          <input type="email" id="email" class="fontsize" name="email_field" placeholder="Enter your email" />
+          <input type="email" id="email" class="fontsize" name="email_field" placeholder="Email" />
         </div>
         <div>
            <label class="fontsize" for="phnum">Phone Number:</label>
-           <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="Enter your phone number" />
-        </div>
-      </fieldset>
-      <fieldset>
-        <legend>Additional Membership</legend>
-        <div>
-          <label>Would you like to add another member for your household?</label>
-          <label>Yes</label><input type="radio" name="yes_no_field" value="yes">
-          <label>No <input type="radio" name="yes_no_field" value="no"></label>
+           <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="Phone Number" />
         </div>
       </fieldset>
       <fieldset>
         <legend>Payment Information</legend>
         <div>
-          <label>Credit Card Number </label>
+          <label>Credit Card Number: </label>
           <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="XXXX XXXX XXXX XXXX" />
         </div>
         <div>
-          <label>Expiration Date </label>
+          <label>Expiration Date: </label>
           <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="MM/YY" />
         </div>
         <div>
-          <label>CVV </label>
+          <label>CVV: </label>
           <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="CVV" />
         </div>
         <div>
