--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
       <div>
         <label>Membership Level: </label>
         <select name="level_field">
-          <option value="blank">Please make selection</option>
-          <option value="$10 - Base">$10 - Base</option>
-          <option value="$25 - Love It!">$25 - Love It!</option>
-          <option value="$50 - Gotta Have it!">$50 - Gotta Have it!</option>
-          <option value="$100 - Centennial">$100 - Centennial</option>
+          <option value="blank">Select your membership level</option>
+          <option value="$25 - Friend">$25 - Friend</option>
+          <option value="$50 - Supporter">$50 - Supporter</option>
+          <option value="$100 - Donor">$100 - Donor</option>
         </select>
       </div>
       <div>
