--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="nojs">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" media="screen" href="css/style.css" />
     <title>Ravenswood Manor Improvement Association</title>
   </head>
   <body>
