Trying to separate boxes into columns

--- a/index.html
+++ b/index.html
@@ -21,27 +21,27 @@
         </select>
       </div>
       <div class="box2">
-        <div>
+        <div class="left">
           <label class="fontsize" for="fname">First Name:</label>
           <input type="text" id="fname" class="fontsize" name="first_name_field" placeholder="First Name" />
         </div>
-        <div>
+        <div class="right">
           <label class="fontsize" for="lname">Last Name:</label>
           <input type="text" id="lname" class="fontsize" name="last_name_field" placeholder="Last Name" />
         </div>
-        <div>
+        <div class="left">
           <label class="fontsize" for="address">Street Address:</label>
           <input type="text" name="address_field" placeholder="Street Address" />
         </div>
-        <div>
+        <div class="right">
           <label class="fontsize" for="address">Apartment Number:</label>
           <input type="text" name="apt_field" placeholder="Apartment Number" />
         </div>
-        <div>
+        <div class="left">
           <label class="fontsize" for="address">City:</label>
           <input type="text" name="city_field" placeholder="City" />
         </div>
-        <div>
+        <div class="right">
           <label>State: </label>
           <select name="state_field">
             <option value="blank">Please make selection</option>
