--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
           <label>CVV: </label>
           <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="CVV" />
         </div>
+      </div>
+      <div class="box4">
         <div>
           <input type="checkbox" name="available_field[]" checked>
           <label>I would like to subscribe to RMIA monthly newsletter.</label>
