--- a/index.html
+++ b/index.html
@@ -21,27 +21,31 @@
         </select>
       </div>
       <div class="box2">
-        <div class="left">
+        <div class="row1">
           <label class="fontsize" for="fname">First Name:</label>
           <input type="text" id="fname" class="fontsize" name="first_name_field" placeholder="First Name" />
         </div>
-        <div class="right">
+        <div class="row1">
           <label class="fontsize" for="lname">Last Name:</label>
           <input type="text" id="lname" class="fontsize" name="last_name_field" placeholder="Last Name" />
         </div>
-        <div class="left">
+      </div>
+      <div class="box2">
+        <div class="row2">
           <label class="fontsize" for="address">Street Address:</label>
           <input type="text" name="address_field" placeholder="Street Address" />
         </div>
-        <div class="right">
+        <div class="row2">
           <label class="fontsize" for="address">Apartment Number:</label>
           <input type="text" name="apt_field" placeholder="Apartment Number" />
         </div>
-        <div class="left">
+      </div>
+      <div class="box2">
+        <div class="row3">
           <label class="fontsize" for="address">City:</label>
           <input type="text" name="city_field" placeholder="City" />
         </div>
-        <div class="right">
+        <div class="row3">
           <label>State: </label>
           <select name="state_field">
             <option value="blank">Please make selection</option>
@@ -97,15 +101,19 @@
             <option value="WY">WY</option>
           </select>
         </div>
-        <div>
+        <div class="row3">
           <label class="fontsize" for="zip">Zip Code:</label>
           <input type="text" name="zip_field" placeholder="Zip Code" />
         </div>
-        <div>
+      </div>
+      <div class="box2">
+        <div class="row4">
           <label class="fontsize" for="email">Email Address:</label>
           <input type="email" id="email" class="fontsize" name="email_field" placeholder="Email" />
         </div>
-        <div>
+      </div>
+      <div class="box2">
+        <div class="row5">
           <label class="fontsize" for="phnum">Phone Number:</label>
           <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="Phone Number" />
         </div>
