Changing items around

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       Association (RMIA). We depend on your membership contributions to do our work throughout the year. Annual membership runs from 
       November through October, but you are welcome to join or renew at any time. Make a contribution that is significant to you!</p>
     <form method="GET" autocomplete="on" action="#null" enctype="multipart/form-data">
-      <div class="box">
+      <div class="box1">
         <label>Membership Level: </label>
         <select name="level_field">
           <option value="blank">Select your membership level</option>
@@ -20,7 +20,7 @@
           <option value="$100 - Donor">$100 - Donor</option>
         </select>
       </div>
-      <div class="box">
+      <div class="box1">
         <div class="row1">
           <label class="fontsize" for="fname">First Name:</label>
           <input type="text" id="fname" class="fontsize" name="first_name_field" placeholder="First Name" />
@@ -30,7 +30,7 @@
           <input type="text" id="lname" class="fontsize" name="last_name_field" placeholder="Last Name" />
         </div>
       </div>
-      <div class="box">
+      <div class="box1">
         <div class="row2">
           <label class="fontsize" for="address">Street Address:</label>
           <input type="text" name="address_field" placeholder="Street Address" />
@@ -40,7 +40,7 @@
           <input type="text" name="apt_field" placeholder="Apartment Number" />
         </div>
       </div>
-      <div class="box">
+      <div class="box1">
         <div class="row3">
           <label class="fontsize" for="address">City:</label>
           <input type="text" name="city_field" placeholder="City" />
@@ -102,29 +102,31 @@
           </select>
         </div>
       </div>
-      <div class="box"
+      <div class="box1">
         <div class="row4">
           <label class="fontsize" for="zip">Zip Code:</label>
           <input type="text" name="zip_field" placeholder="Zip Code" />
         </div>
       </div>
-      <div class="box">
+      <div class="box1">
         <div class="row5">
           <label class="fontsize" for="email">Email Address:</label>
           <input type="email" id="email" class="fontsize" name="email_field" placeholder="Email" />
         </div>
       </div>
-      <div class="box">
+      <div class="box1">
         <div class="row6">
           <label class="fontsize" for="phnum">Phone Number:</label>
           <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="Phone Number" />
         </div>
       </div>
-      <div class="box">
+      <div class="box1">
         <div>
           <label>Credit Card Number: </label>
           <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="XXXX XXXX XXXX XXXX" />
         </div>
+      </div>
+      <div class="box1">
         <div>
           <label>Expiration Date: </label>
           <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="MM/YY" />
@@ -134,7 +136,7 @@
           <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="CVV" />
         </div>
       </div>
-      <div class="box">
+      <div class="box2">
         <div>
           <input type="checkbox" name="available_field[]" checked>
           <label>Subscribe to RMIA monthly newsletter.</label>
