Testing out asterisk

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="box1">
         <div class="row1">
           <label class="fontsize" for="fname">First Name:</label>
-          <input type="text" id="fname" class="fontsize" name="first_name_field" placeholder="First Name" />
+          <input type="text" id="fname" class="fontsize" name="first_name_field" placeholder="First Name &#42;" />
         </div>
         <div class="row1">
           <label class="fontsize" for="lname">Last Name:</label>
