--- a/index.html
+++ b/index.html
@@ -22,28 +22,23 @@
       </div>
       <div class="box1">
         <div class="row1">
-          <label class="fontsize" for="fname">First Name:</label>
           <input type="text" id="fname" class="fontsize" name="first_name_field" placeholder="First Name &#42;" />
         </div>
         <div class="row1">
-          <label class="fontsize" for="lname">Last Name:</label>
-          <input type="text" id="lname" class="fontsize" name="last_name_field" placeholder="Last Name" />
+          <input type="text" id="lname" class="fontsize" name="last_name_field" placeholder="Last Name &#42;" />
         </div>
       </div>
       <div class="box1">
         <div class="row2">
-          <label class="fontsize" for="address">Street Address:</label>
-          <input type="text" name="address_field" placeholder="Street Address" />
+          <input type="text" name="address_field" placeholder="Street Address &#42;" />
         </div>
         <div class="row2">
-          <label class="fontsize" for="address">Apartment Number:</label>
           <input type="text" name="apt_field" placeholder="Apartment Number" />
         </div>
       </div>
       <div class="box1">
         <div class="row3">
-          <label class="fontsize" for="address">City:</label>
-          <input type="text" name="city_field" placeholder="City" />
+          <input type="text" name="city_field" placeholder="City &#42;" />
         </div>
         <div class="row3">
           <label>State: </label>
@@ -104,36 +99,31 @@
       </div>
       <div class="box1">
         <div class="row4">
-          <label class="fontsize" for="zip">Zip Code:</label>
-          <input type="text" name="zip_field" placeholder="Zip Code" />
+          <input type="text" name="zip_field" placeholder="Zip Code &#42;" />
         </div>
       </div>
       <div class="box1">
         <div class="row5">
-          <label class="fontsize" for="email">Email Address:</label>
-          <input type="email" id="email" class="fontsize" name="email_field" placeholder="Email" />
+          <input type="email" id="email" class="fontsize" name="email_field" placeholder="Email Address &#42;" />
         </div>
       </div>
       <div class="box1">
         <div class="row6">
-          <label class="fontsize" for="phnum">Phone Number:</label>
-          <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="Phone Number" />
+          <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="Phone Number &#42;" />
+        </div>
+      </div>
+      <div class="box1">
+        <legend>Pay with</legend>
+        <div>
+          <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="Card Number &#42;" />
         </div>
       </div>
       <div class="box1">
         <div>
-          <label>Credit Card Number: </label>
-          <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="XXXX XXXX XXXX XXXX" />
-        </div>
-      </div>
-      <div class="box1">
-        <div>
-          <label>Expiration Date: </label>
-          <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="MM/YY" />
+          <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="MM/YY &#42;" />
         </div>
         <div>
-          <label>CVV: </label>
-          <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="CVV" />
+          <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="CVV &#42;" />
         </div>
       </div>
       <div class="box2">
