Cleaning up labels and legends

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       November through October, but you are welcome to join or renew at any time. Make a contribution that is significant to you!</p>
     <form method="GET" autocomplete="on" action="#null" enctype="multipart/form-data">
       <div class="box1">
-        <label>Membership Level: </label>
+        <p><legend> Select Membership</legend></p>
         <select name="level_field">
           <option value="blank">Select your membership level</option>
           <option value="$25 - Friend">$25 - Friend</option>
@@ -41,9 +41,8 @@
           <input type="text" name="city_field" placeholder="City &#42;" />
         </div>
         <div class="row3">
-          <label>State: </label>
           <select name="state_field">
-            <option value="blank">Please make selection</option>
+            <option value="blank">State</option>
             <option value="AK">AK</option>
             <option value="AL">AL</option>
             <option value="AR">AR</option>
@@ -113,7 +112,7 @@
         </div>
       </div>
       <div class="box1">
-        <legend>Pay with</legend>
+        <p><legend>Pay with</legend></p>
         <div>
           <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="Card Number &#42;" />
         </div>
