Still cleaning up legends

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
     <p>Ravenswood Manor is a strong community due to the collective efforts of our residents and Ravenswood Manor Improvement 
       Association (RMIA). We depend on your membership contributions to do our work throughout the year. Annual membership runs from 
       November through October, but you are welcome to join or renew at any time. Make a contribution that is significant to you!</p>
-    <form method="GET" autocomplete="on" action="#null" enctype="multipart/form-data">
+    <form method="GET" autocomplete="on" action="#null" enctype="multipart/form-data">\
+      <p><legend>Select Your Membership</legend></p>
       <div class="box1">
-        <p><legend> Select Membership</legend></p>
         <select name="level_field">
-          <option value="blank">Select your membership level</option>
+          <option value="blank">Membership Level</option>
           <option value="$25 - Friend">$25 - Friend</option>
           <option value="$50 - Supporter">$50 - Supporter</option>
           <option value="$100 - Donor">$100 - Donor</option>
         </select>
       </div>
+      <p><legend>Enter Your Information</legend></p>
       <div class="box1">
         <div class="row1">
           <input type="text" id="fname" class="fontsize" name="first_name_field" placeholder="First Name &#42;" />
@@ -111,8 +112,8 @@
           <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="Phone Number &#42;" />
         </div>
       </div>
+      <p><legend>Pay with</legend></p>
       <div class="box1">
-        <p><legend>Pay with</legend></p>
         <div>
           <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="Card Number &#42;" />
         </div>
