--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       Association (RMIA). We depend on your membership contributions to do our work throughout the year. Annual membership runs from 
       November through October, but you are welcome to join or renew at any time. Make a contribution that is significant to you!</p>
     <form method="GET" autocomplete="on" action="#null" enctype="multipart/form-data">\
-      <p><legend>Select Your Membership</legend></p>
+      <h3><legend>Select Your Membership</legend></h3>
       <div class="box1">
         <select name="level_field">
           <option value="blank">Membership Level</option>
@@ -20,7 +20,7 @@
           <option value="$100 - Donor">$100 - Donor</option>
         </select>
       </div>
-      <p><legend>Enter Your Information</legend></p>
+      <h3><legend>Enter Your Information</legend></h3>
       <div class="box1">
         <div class="row1">
           <input type="text" id="fname" class="fontsize" name="first_name_field" placeholder="First Name &#42;" />
@@ -112,7 +112,7 @@
           <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="Phone Number &#42;" />
         </div>
       </div>
-      <p><legend>Pay with</legend></p>
+      <h3><legend>Pay with</legend></h3>
       <div class="box1">
         <div>
           <input type="text" id="phnum" class="fontsize" name="phone_field" placeholder="Card Number &#42;" />
