Testing set up for a float label

--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
       </div>
       <h3>Enter Your Information</h3>
       <div class="box1">
-        <div class="row1">
-          <input type="text" id="fname" class="fontsize" name="first_name_field" placeholder="First Name &#42;" />
+        <div class="row1 float_container">
+
+<label for="float_field">
+          <input id="float_field" class="fontsize" type="text" name="first_name_field" placeholder="First Name &#42;" />
         </div>
-        <div class="row1">
-          <input type="text" id="lname" class="fontsize" name="last_name_field" placeholder="Last Name &#42;" />
+        <div class="row1 float_container">
+
+<label for="float_field">
+          <input id="float_field" type="text" class="fontsize" name="last_name_field" placeholder="Last Name &#42;" />
         </div>
       </div>
       <div class="box1">
