--- a/index.html
+++ b/index.html
@@ -22,14 +22,12 @@
       </div>
       <h3>Enter Your Information</h3>
       <div class="box1">
-        <div class="row1 float_container">
-
-<label for="float_field">
+        <div id="float_container" class="row1 float_container">
+          <label for="float_field">
           <input id="float_field" class="fontsize" type="text" name="first_name_field" placeholder="First Name &#42;" />
         </div>
-        <div class="row1 float_container">
-
-<label for="float_field">
+        <div id="float_container" class="row1 float_container">
+          <label for="float_field">
           <input id="float_field" type="text" class="fontsize" name="last_name_field" placeholder="Last Name &#42;" />
         </div>
       </div>
