--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" media="screen" href="css/style.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="css/reset.css"> -->
+    <script async src="js/script.js"></script>
     <title>Ravenswood Manor Improvement Association</title>
   </head>
   <body>
